--- a/views/notes/onenoteview.hbs
+++ b/views/notes/onenoteview.hbs
@@ -18,8 +18,16 @@
 
         <section id="tools-section-note" data-id="{{oneNote.id}}">
             <a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>
-            <input type="button" id="edit-button" value="Edit"/>
-                        <a href="/notes" id="button-all-notes">ALL TO NOTES</a>
+
+            <div id="edit-button" class="class-button-edit-note">
+             <a >Edit</a>
+            </div>
+
+            <div class="class-button-all-notes">
+              <a href="/notes" id="button-all-notes">All notes</a>
+            </div>
+
+                        {{!-- <a href="/notes" id="button-all-notes">ALL TO NOTES</a> --}}
 
         </section>
   </section>
