--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -9,7 +9,7 @@
   </div>
   <div>
     {{#each allNotes}}
-      <div class="all-notes-title">{{this.title}}</div>
+      <div class="all-notes-title">• {{this.title}}</div>
     {{/each}}
   </div>
 
