--- a/public/stylesheets/onetodostyle.css
+++ b/public/stylesheets/onetodostyle.css
@@ -19,6 +19,10 @@
   height: 1.5rem;
 }
 
+#trashbin-image-todos:hover {
+  transform: scale(1.2);
+}
+
 /* #image-all-todos {
   height: 2rem;
   display: flex;
@@ -47,6 +51,11 @@ input {
   border: 0px solid;
   height: 30px;
   font-size: 24px;
+}
+
+input:focus {
+  border: none;
+  outline: none;
 }
 
 input[name="one-todo-title"] {
@@ -107,4 +116,8 @@ input[name="plus-input"] {
   margin-bottom: 2rem;
   margin-top: 2rem;
   margin-right: 1rem;
+}
+
+.class-button-all-todo:hover {
+  transform: scale(1.2);
 }
