--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -11,7 +11,7 @@
 <section data-id="{{oneTodo.id}}" id="section-one-todo">
 
   {{!-- <h2 class="one-title">{{oneTodo.title}}</h2> --}}
-<p><input name="one-todo-title" type="text" id="edit-todo-title" value="{{oneTodo.title}}" /><a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">🖋</a></p>
+<p><input name="one-todo-title" type="text" id="edit-todo-title" value="{{oneTodo.title}}" maxlength="80"/><a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">🖋</a></p>
 
 
 <div class="content">
