--- a/public/stylesheets/listnotestyle.css
+++ b/public/stylesheets/listnotestyle.css
@@ -10,11 +10,11 @@ body {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  align-content: space-around;
   overflow-y: scroll;
   width: 850px;
-  height: 370px;
-  padding-top: 22rem;
+  padding: 1rem 2rem;
+  height: 610px;
+  box-shadow: 0px 0.1px 10px rgba(0, 0, 0, 0.15);
 }
 
 .each-note {
