--- a/public/stylesheets/createtodostyle.css
+++ b/public/stylesheets/createtodostyle.css
@@ -27,8 +27,8 @@ input {
   background: transparent;
   border: 0px solid;
   height: 35px;
-  width: 300px;
-  font-size: 24px;
+  width: 390px;
+  font-size: 20px;
 }
 
 input:focus {
@@ -39,9 +39,12 @@ input:focus {
 #outils-one-todo-create {
   display: flex;
   flex-direction: column;
-  width: 7rem;
-  padding-top: 5rem;
-  padding-right: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 0 2rem;
 }
 
 #button-all-todo-create {
@@ -62,6 +65,10 @@ input:focus {
   text-align: center;
 
   color: #000000;
+}
+
+.class-button-all-todo-create:hover {
+  transform: scale(1.2);
 }
 
 .class-button-all-todo-create {
