--- a/public/stylesheets/listnotestyle.css
+++ b/public/stylesheets/listnotestyle.css
@@ -13,7 +13,7 @@ body {
   overflow-y: scroll;
   width: 850px;
   height: 670px;
-  padding-top: 1rem;
+  padding: 1rem 2rem;
   box-shadow: 0px 0.1px 10px rgba(0, 0, 0, 0.15);
 }
 
