--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -1,6 +1,6 @@
 <section class="menu-section">
   <div class="notes">
-    <a id="notes-link" href="/notes"> Notes</a>
+    <a id="notes-link" href="/notes"> <div class="hover-notes"> Notes</div></a>
     <a href="/notes/create"><img
         id="add-button"
         src="/images/add-button.png"
@@ -21,7 +21,7 @@
   </div>
 
   <div class="todos">
-    <a id="todos-link" href="/todos"> To do</a>
+    <a id="todos-link" href="/todos"> <div class="hover-todos"> To do</div></a>
 
     <a href="/todos/create"><img
         id="add-button"
