--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -20,7 +20,7 @@
     </div>
     <section data-id="{{this.id}}" id="section-buttons">
       <a href="/notes/{{this.id}}"><img id="edit-image" src="/images/edit.png", alt="Edit"/></a>
-      <!--<a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>-->
+      <a href="/notes" class="trashbin-button-all-notes"><img class="trashbin-image-for-each-note-in-all-notes" src="/images/trash-bin.png", alt="Trash bin"/></a>
       </section>
     </div>
   {{/each}}
