--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     <a href="/loginorregister" id="press-enter-id">
       <img
         id="press-enter-image"
-        src="/images/pressenter.png"
+        src="/images/click-it.png"
         alt="press-enter"
       />
     </a>
