--- a/public/stylesheets/onetodostyle.css
+++ b/public/stylesheets/onetodostyle.css
@@ -38,6 +38,11 @@
   display: flex;
   flex-direction: column;
   padding-top: 3rem;
+  overflow-y: scroll;
+  width: 1100px;
+  height: 600px;
+  padding-left: 3rem;
+  padding-bottom: 2rem;
 }
 
 .p {
