--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -17,10 +17,11 @@
         <div class="todo-title">{{this.title}}</div>
         
           <section data-id="{{this.id}}" id="section-buttons">
-            <div id="div-blue-button" ><img id="blue-button" src="/images/blue-ball.png", alt="blue-button"/></div>
-                        <div id="div-red-button" ><img id="red-button" src="/images/red-ball.png", alt="red-button"/></div>
-
+            <div id="div-blue-button" ><img id="blue-button" src="/images/orange-ball.png", alt="blue-button"/></div>
+            <div id="div-red-button" ><img id="red-button" src="/images/red-ball.png", alt="red-button"/></div>
             <a id="div-pen-button" href="/todos/{{this.id}}"><img id="edit-image-todos" src="/images/edit.png", alt="Edit-todo"/></a>
+            <a href="/todos" class="trashbin-button-all-todos"><img class="trashbin-image-for-each-todo-in-all-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
+
             {{!-- <a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a> --}}
           </section>
       </div>
