--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <section class="old-paper">
   <div class="intro-post-it-now">
-    <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
+    <p class="line-1 anim-typewriter">TEST POST IT RIGHT HERE RIGHT NOW</p>
   </div>
   <div class="press-enter">
     <a href="/loginorregister" id="press-enter-id">
