last changes and check comments

--- a/views/filecreation.hbs
+++ b/views/filecreation.hbs
@@ -2,6 +2,19 @@
 {{> userheaderpartial}}
 </section>
 
-<section>
+<section class="section-file-creation">
 {{> selectionpartial}}
+
+<div class="create-button-file-creation">
+    <div class="note-div">
+        <img class="add-button" src="/images/add-button.png" alt="plus"/>
+        <a href="/notes/create" id="button-note-file-creation">Create a note</a>
+    </div>
+    
+    <div class="note-div">
+        <img class="add-button" src="/images/add-button.png" alt="plus"/>
+        <a href="/todos/create" id="button-todo-file-creation">Create a todo</a>
+    </div>
+</div>
+
 </section>
