--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,18 @@
-<section class="old-paper">
-  <div class="intro-post-it-now">
-    <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
-  </div>
-  <div class="press-enter">
-    <a href="/loginorregister" id="press-enter-id">
-      <img
-        id="press-enter-image"
-        src="/images/click-it.png"
-        alt="press-enter"
-      />
-    </a>
-  </div>
+<section class="all-intro-page">
+  <section class="old-paper">
+    <div class="intro-post-it-now">
+      <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
+    </div>
+    <div class="press-enter">
+      <a href="/loginorregister" id="press-enter-id">
+        <img
+          id="press-enter-image"
+          src="/images/click-it.png"
+          alt="press-enter"
+        />
+      </a>
+    </div>
+  </section>
+  <footer>Copyright © 2022 Lucile Tronczyk, Amélie Chabrand. All Rights Reserved
+    - Made in 4 days in Ironhack Paris</footer>
 </section>
