input size ok to prevent fals tasks

--- a/views/todo/createtodoview.hbs
+++ b/views/todo/createtodoview.hbs
@@ -13,7 +13,7 @@
         <section ="section-one-todo-create"><h2 class="transformation-line"></h2>
         <ul id="tasks"></ul>
             <input type="text" data-todo-id="" name="title" id="new-todo-input" placeholder="Title of your to do" maxlength="35">
-            <input type="button" id="add-title" value="+"></input>
+            <input name="plus-input" type="button" id="add-title" value="+"></input>
         </section>
         <section id="outils-one-todo-create">
             
